# Changelog

## v0.4.3 (upcoming)

- macOS: Improve dialog that is shown in case screenshot permissions are missing.

## v0.4.2 (2023-05-21)

- Fix quotes in detected text can result in wrong detection.
  ([#446](https://github.com/dynobo/normcap/issues/446))
- Update AppImage base image from Ubuntu 18.04 (deprected) to 20.04.

## v0.4.1 (2023-05-01)

- Enlarge settings button a bit to make it easier to spot.
  ([#254](https://github.com/dynobo/normcap/issues/254))
- Prevent running multiple instances and start capture in original instance instead.
  ([#306](https://github.com/dynobo/normcap/issues/306))
- Fix unintended re-capture if tray icon is disabled.
  ([#254](https://github.com/dynobo/normcap/issues/254))
- Fix occasional crashes after use of Language Manager.
- Add experimental `--cli-mode` switch to print NormCap's detection to STDOUT and exit
  immediately. This is useful if you want to use the detected text as input for other
  programs or commands. E.g.:
  ```sh
  normcap --cli-mode | xargs -I {} firefox "http://duckduckgo.com/?q={}"`
  ```

## v0.4.0 (2023-01-29)

- All: Remove support for Tesseract \< 5.0.
- All: Faster startup if "Check for updates" is enabled.
- All: Refactor icon handling. Fixes a bug in the AUR package.
  ([#353](https://github.com/dynobo/normcap/issues/353))
- All: Fix crash if tesseract data for English is missing.
  ([#353](https://github.com/dynobo/normcap/issues/353))
- Linux: Fix FlatPak crashes due to missing permissions
  ([#320](https://github.com/dynobo/normcap/issues/320)).
- Prebuild packages: Add UI for downloading additional languages.
- Prebuild packages: Remove all default languages except English to reduce size.
- Prebuild packages (Windows): Switch to different tesseract binaries, which should work
  more reliable across systems. Unfortunately, it also enlarges the file size a lot.
  Would be great to [get your feedback](https://github.com/dynobo/normcap/discussions)